docs/v0.3.0a97/_sources/reference/_autosummary/matflow.param_classes.load.LoadStep.rst.txt
matflow.param_classes.load.LoadStep
===================================

.. currentmodule:: matflow.param_classes.load

.. autoclass:: LoadStep
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~LoadStep.biaxial
      ~LoadStep.dump_to_HDF5_group
      ~LoadStep.example_uniaxial
      ~LoadStep.planar_2D
      ~LoadStep.plane_strain
      ~LoadStep.prepare_JSON_dump
      ~LoadStep.random_2D
      ~LoadStep.random_3D
      ~LoadStep.save_from_HDF5_group
      ~LoadStep.save_from_JSON
      ~LoadStep.to_dict
      ~LoadStep.uniaxial
      ~LoadStep.uniaxial_cyclic
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~LoadStep.method_args
      ~LoadStep.method_name
      ~LoadStep.strain_like_tensor
      ~LoadStep.type
   
   